--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__button/header__button.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__text/header__text.css);
+@import url(./blocks/header/__container/header__container.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__image/profile__image.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
@@ -47,6 +49,8 @@
 @import url(./blocks/popup/__error/popup__error.css);
 @import url(./blocks/popup/__error/_visible/popup__error_visible.css);
 @import url(./blocks/popup/__title/popup__title.css);
+@import url(./blocks/popup/__info-image/popup__info-image.css);
+@import url(./blocks/popup/__info-title/popup__info-title.css);
 @import url(./blocks/login/login.css);
 @import url(./blocks/login/__button/login__button.css);
 @import url(./blocks/login/__form/login__form.css);
